--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
-.yt-scrollbar::-webkit-scrollbar {
-    width: 10px;
+/* Select the scrollbar track */
+::-webkit-scrollbar-track {
+    /* Change the background color */
+    background-color: #f1f1f1;
   }
   
-  .yt-scrollbar::-webkit-scrollbar-thumb {
-    background: transparent;
-    border-radius: 10px;
-  }
+  /* Select the scrollbar thumb */
+  ::-webkit-scrollbar-thumb {
+    /* Change the background color */
+    background-color: #888;
   
-  .yt-scrollbar::-webkit-scrollbar-thumb:hover {
-    background: #272727;
+    /* Change the size of the thumb */
+    height: 30px;
+    width: 30px;
   }
-  
-  .yt-scrollbar::-webkit-scrollbar-track {
-    background: transparent;
-}
